--- a/html/popup.html
+++ b/html/popup.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>AIS Themes</title>
-    <link href="../css/popup.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <title>AIS Themes</title>
+  <link href="../css/popup.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-    <p>Made by @ic_it</p>
-    <p>ON or OFF</p>
-	<label class="switch">
-	  <input type="checkbox" checked>
-	  <span class="slider round"></span>
-	</label>
+
+<body >
+  <h1 class="title">Select Theme</h1>
+  <div class="select">
+    <select id="select">
+    </select>
+  </div>
+
+  <button id="apply" class="apply">Apply</button>
+  <button id="defaultStyles" class="apply">defaultStyles</button>
   
+  <p>Made by @ic_it</p>
+
+  <script src='../js/popup.js'></script>
 </body>
+
 </html>
