--- a/html/popup.html
+++ b/html/popup.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AIS Themes</title>
+  <title>BetterAIS</title>
   <link href="../css/popup.css" rel="stylesheet" type="text/css" />
 </head>
 
