--- a/html/options.html
+++ b/html/options.html
@@ -3,13 +3,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
-  <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
-  <title>BetterAIS</title>
+  <title>BetterAIS | Options</title>
 </head>
 <body>
-  <script>
-    $("body").css({background: "red"});
-  </script>
+  <h1>TODO: Add options page</h1>
 </body>
 </html>
