--- a/html/popup.html
+++ b/html/popup.html
@@ -1,24 +1,18 @@
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>BetterAIS</title>
   <link href="../css/popup.css" rel="stylesheet" type="text/css" />
+  <script src='../js/popup.js' defer></script>
+  <title>BetterAIS</title>
 </head>
-
-<body >
+<body>
   <h1 class="title">Select Theme</h1>
   <div class="select">
-    <select id="select">
-    </select>
+    <label for="select" class="sr-only">Choose a theme:</label>
+    <select id="select"></select>
   </div>
-
   <button id="apply" class="apply">Apply</button>
   <button id="defaultStyles" class="apply">defaultStyles</button>
-  
   <p>Made by @ic_it</p>
-
-  <script src='../js/popup.js'></script>
 </body>
-
 </html>
